src/test/ui/issues/issue-56031.rs
struct T;

impl for T {}

fn main() {}
